apps/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: autobrr
  labels:
    app: autobrr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.88
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7474
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /api/healthz/readiness
              port: 7474
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz/liveness
              port: 7474
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: autobrr-config
              mountPath: /config
            - name: autobrr-tmp
              mountPath: /tmp
      volumes:
        - name: autobrr-config
          secret:
            secretName: autobrr-config-secret
        - name: autobrr-tmp
          emptyDir:
            sizeLimit: 512Mi
