apps/autobrr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: autobrr
spec:
  selector:
    app: autobrr
  ports:
    - port: 80
      targetPort: 7474
