apps/autobrr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: autobrr-lan
  namespace: autobrr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`autobrr.wevelsiep.com`)
      kind: Rule
      services:
        - name: autobrr
          port: 80
